--- a/debian/control
+++ b/debian/control
@@ -2,9 +2,9 @@ Source: zlib
 Section: libs
 Priority: optional
 Maintainer: Mark Brown <broonie@debian.org>
-Standards-Version: 3.9.4
+Standards-Version: 3.9.8
 Homepage: http://zlib.net/
-Build-Depends: debhelper (>= 8.1.3~), binutils (>= 2.18.1~cvs20080103-2) [mips mipsel], gcc-multilib [amd64 i386 kfreebsd-amd64 mips mipsel powerpc ppc64 s390 sparc s390x], dpkg-dev (>= 1.16.1)
+Build-Depends: debhelper (>= 8.1.3~), binutils (>= 2.18.1~cvs20080103-2) [mips mipsel], gcc-multilib [amd64 i386 kfreebsd-amd64 mips mipsel powerpc ppc64 s390 sparc s390x] <!stage1>, dpkg-dev (>= 1.16.1)
 
 Package: zlib1g
 Architecture: any
@@ -54,6 +54,7 @@ Description: compression library - runtime for Debian installer
 
 Package: lib64z1
 Architecture: sparc s390 i386 powerpc mips mipsel
+Build-Profiles: <!stage1>
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Replaces: amd64-libs (<< 1.4)
 Description: compression library - 64 bit runtime
@@ -64,16 +65,22 @@ Description: compression library - 64 bit runtime
 Package: lib64z1-dev
 Section: libdevel
 Architecture: sparc s390 i386 powerpc mips mipsel
+Build-Profiles: <!stage1>
 Depends: lib64z1 (= ${binary:Version}), zlib1g-dev (= ${binary:Version}), lib64c-dev, ${misc:Depends}
 Replaces: amd64-libs-dev (<< 1.4)
 Provides: lib64z-dev
-Description: compression library - 64 bit development
+Description: compression library - 64 bit - DO NOT USE EXCEPT FOR PACKAGING
  zlib is a library implementing the deflate compression method found
  in gzip and PKZIP.  This package includes the development support
  files for building 64 bit applications.
+ .
+ This package should ONLY be used for building packages, users who do
+ not need to build packages should use multiarch to install the relevant
+ runtime.
 
 Package: lib32z1
 Architecture: amd64 ppc64 kfreebsd-amd64 s390x
+Build-Profiles: <!stage1>
 Conflicts: libc6-i386 (<= 2.9-18)
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Replaces: ia32-libs (<< 1.5)
@@ -85,17 +92,23 @@ Description: compression library - 32 bit runtime
 Package: lib32z1-dev
 Section: libdevel
 Architecture: amd64 ppc64 kfreebsd-amd64 s390x
+Build-Profiles: <!stage1>
 Conflicts: libc6-i386 (<= 2.9-18)
 Depends: lib32z1 (= ${binary:Version}), zlib1g-dev (= ${binary:Version}), lib32c-dev, ${misc:Depends}
 Provides: lib32z-dev
 Replaces: ia32-libs-dev (<< 1.5)
-Description: compression library - 32 bit development
+Description: compression library - 32 bit - DO NOT USE EXCEPT FOR PACKAGING
  zlib is a library implementing the deflate compression method found
  in gzip and PKZIP.  This package includes the development support
  files for building 32 bit applications.
+ .
+ This package should ONLY be used for building packages, users who do
+ not need to build packages should use multiarch to install the relevant
+ runtime.
 
 Package: libn32z1
 Architecture: mips mipsel
+Build-Profiles: <!stage1>
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: compression library - n32 runtime
  zlib is a library implementing the deflate compression method found
@@ -105,9 +118,14 @@ Description: compression library - n32 runtime
 Package: libn32z1-dev
 Section: libdevel
 Architecture: mips mipsel
+Build-Profiles: <!stage1>
 Depends: libn32z1 (= ${binary:Version}), zlib1g-dev (= ${binary:Version}), libn32c-dev, ${misc:Depends}
 Provides: libn32z-dev
-Description: compression library - n32 development
+Description: compression library - n32 - DO NOT USE EXCEPT FOR PACKAGING
  zlib is a library implementing the deflate compression method found
  in gzip and PKZIP.  This package includes the development support
  files for building n32 applications.
+ .
+ This package should ONLY be used for building packages, users who do
+ not need to build packages should use multiarch to install the relevant
+ runtime.
