--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.8.3
 Homepage: http://zlib.net/
 XS-VCS-Bzr: http://bzr.debian.org/bzr/pkg-zlib/zlib/debian
 Build-Depends: debhelper (>= 6.0.7~), binutils (>= 2.18.1~cvs20080103-2) [mips mipsel], gcc-multilib [amd64 i386 kfreebsd-amd64 mips mipsel powerpc ppc64 s390 sparc], dpkg-dev (>= 1.16.0~ubuntu4)
-XS-Pexip-Upstream: http://archive.ubuntu.com/ubuntu/ precise
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ jessie
 
 Package: zlib1g
 Architecture: any
