--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ XSBC-Pexip-Original-Maintainer: Mark Brown <broonie@debian.org>
 Standards-Version: 3.9.8
 Homepage: http://zlib.net/
 Build-Depends: debhelper (>= 8.1.3~), gcc-multilib [amd64 i386 kfreebsd-amd64 mips mipsel powerpc ppc64 s390 sparc s390x mipsn32 mipsn32el mipsr6 mipsr6el mipsn32r6 mipsn32r6el mips64 mips64el mips64r6 mips64r6el x32] <!nobiarch>, dpkg-dev (>= 1.16.1)
-XS-Pexip-Upstream: http://deb.debian.org/debian/ bullseye
+XS-Pexip-Upstream: http://deb.debian.org/debian/ bookworm
 
 Package: zlib1g
 Architecture: any
